# 298

./: .env.example  DESIGN.md  README.md  fruger.db  main.py  pyproject.toml  requirements.txt
app/: BiddingService.py  admin_dashboard.py  admin_plots.py  analytics_plots.py  analytics_queries.py  chart_theme.py  components.py  config.py  dashboard.py  demo_driver_seed.py  deps.py  embed_html.py  fastui_html.py  fruger_pages.py  fruger_tailwind.py  login_html.py  operational_demo_seed.py  rider_dashboard.py  seed.py  ws.py
app/db/: migrations.py  operational_seed.py
app/routers/: admin.py  analytics.py  auth.py  driver.py  embed.py  fruger_fastui.py  geocode.py  pages.py  rider_ui.py  rides.py
app/schemas/: admin_metrics.py  analytics.py  geocode.py  operational.py
app/services/: admin_service.py  auth_service.py  authentication.py  bidding_service.py  database.py  db_session.py  geo.py  operational_pickup_events.py  pickup_dataset_labels.py  reverse_geocode.py  ride.py  ride_service.py
app/static/: admin_map.js  driver.js  rider_bids.js  rider_hub_actions.js  theme.css
app/templates/: admin_map.html  analytics.html  base.html  driver_map.html  home.html  login.html  rider_bids.html
data/: uber-raw-data-apr14.csv
tests/: test_smoke_ride_loop.py
