[project]
name = "298"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "email-validator>=2.0.0",
    "fastapi>=0.136.0",
    "fastui>=0.9.0",
    "jinja2>=3.1.0",
    "kagglehub>=1.0.0",
    "lib>=4.0.0",
    "matplot>=0.1.9",
    "pandas>=3.0.2",
    "passlib>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.9",
    "uvicorn>=0.44.0",
]
