[project]
name = "298"
version = "0.1.0"
description = "Fruger — ride marketplace and NYC pickup analytics"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "email-validator>=2.0.0",
    "fastapi>=0.136.0",
    "fastui>=0.9.0",
    "kagglehub>=1.0.0",
    "lib>=4.0.0",
    "matplotlib>=3.8.0",
    "pandas>=3.0.2",
    "passlib>=1.7.4",
    "pydantic>=2.9.0",
    "python-jose[cryptography]>=3.3.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
    "uvicorn>=0.44.0",
    "apscheduler>=3.11.2",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.0.0",
]
